--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react": "^12.0.4",
+    "@testing-library/user-event": "^12.0.9",
     "jwt-decode": "^3.1.2",
     "prop-types": "^15.8.1",
-    "react": "17.0.0",
-    "react-dom": "17.0.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-hot-toast": "^2.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
